--- a/src/html/solarsystem.html
+++ b/src/html/solarsystem.html
@@ -23,11 +23,21 @@
             margin: auto;
             display: block;
         }
+
+        #erde {
+            display: block;
+        }
+
+        #test {
+            display: block;
+        }
     </style>
 </head>
 
 <body>
-    <canvas id="can"></canvas>
+    <canvas id="can">
+        <ul id="test">Test asdas</ul>
+    </canvas>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
